<resources>
    <string name="app_name">Rba films</string>
    <string name="email">Email</string>
    <string name="password">Password ?</string>
    <string name="login">Login</string>
    <string name="forget">Forget</string>
    <string name="register1">Register</string>
    <string name="register">Registration</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="passworrd">Password</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="setting">Settings</string>
    <string name="otp">OTP</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="movies">MOVIES</string>
    <string name="videos">VIDEOS</string>
    <string name="tv_sh">TV SHOES</string>
    <string name="rba">RBA</string>
    <string name="share_with_friend">Share With Friends</string>
    <string name="c_password">Confirm Password</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change Password</string>
    <string name="terms">Terms of use</string>
    <string name="about">About us</string>
    <string name="faq">FAQ</string>
    <string name="contact">Contact us</string>
    <string name="loading">Loading</string>

    <string name="logout">Logout</string>
    <string name="movie_brief">The story centers oon a family headed by Ramkishan containing his wife Mamta
        and three sons.The film shot in Mumbais Film City and in the villages of Rajasthan state.
    </string>
    <string name="details">Please complete your basic details</string>
</resources>
