<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rba"
                    android:textSize="30sp"
                    android:layout_marginLeft="10sp"
                    android:textColor="@color/rba"
                    android:fontFamily="@font/poppin_extra"
                    />

                <TextView
                    android:id="@+id/txt_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textSize="18sp"
                    android:layout_marginRight="20sp"
                    android:textColor="@color/rba"
                    android:layout_marginTop="10sp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/lato_regular"
                    />

            </RelativeLayout>

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="30sp"
              app:cardBackgroundColor="@color/white"
              android:layout_margin="10dp"
              app:cardCornerRadius="10sp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/share_with_friend"
                  android:padding="15dp"
                  android:textSize="17dp"
                  android:textColor="@color/rba"
                  android:fontFamily="@font/lato_bold"
                  android:layout_gravity="left"
                  android:gravity="center"/>

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="50dp"
                  android:tint="@color/light_grey"
                  android:layout_marginRight="10dp"
                  android:src="@mipmap/forward"
                  android:layout_gravity="right"/>


          </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="30sp"
                app:cardBackgroundColor="@color/white"
                android:layout_margin="10dp"
                app:cardCornerRadius="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:padding="15dp"
                    android:textSize="17dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/lato_bold"
                    android:layout_gravity="left"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:tint="@color/light_grey"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/forward"
                    android:layout_gravity="right"/>

            </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="30sp"
              app:cardBackgroundColor="@color/white"
              android:layout_margin="10dp"
              app:cardCornerRadius="10sp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/privacy"
                  android:padding="15dp"
                  android:textSize="17dp"
                  android:textColor="@android:color/black"
                  android:fontFamily="@font/lato_bold"
                  android:layout_gravity="left"
                  android:gravity="center"/>

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="50dp"
                  android:tint="@color/light_grey"
                  android:layout_marginRight="10dp"
                  android:src="@mipmap/forward"
                  android:layout_gravity="right"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="30sp"
              app:cardBackgroundColor="@color/white"
              android:layout_margin="10dp"
              app:cardCornerRadius="10sp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/terms"
                  android:padding="15dp"
                  android:textSize="17dp"
                  android:textColor="@android:color/black"
                  android:fontFamily="@font/lato_bold"
                  android:layout_gravity="left"
                  android:gravity="center"/>

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="50dp"
                  android:tint="@color/light_grey"
                  android:layout_marginRight="10dp"
                  android:src="@mipmap/forward"
                  android:layout_gravity="right"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="30sp"
              app:cardBackgroundColor="@color/white"
              android:layout_margin="10dp"
              app:cardCornerRadius="10sp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/about"
                  android:padding="15dp"
                  android:textSize="17dp"
                  android:textColor="@android:color/black"
                  android:fontFamily="@font/lato_bold"
                  android:layout_gravity="left"
                  android:gravity="center"/>

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="50dp"
                  android:tint="@color/light_grey"
                  android:layout_marginRight="10dp"
                  android:src="@mipmap/forward"
                  android:layout_gravity="right"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="30sp"
              app:cardBackgroundColor="@color/white"
              android:layout_margin="10dp"
              app:cardCornerRadius="10sp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/faq"
                  android:padding="15dp"
                  android:textSize="17dp"
                  android:textColor="@android:color/black"
                  android:fontFamily="@font/lato_bold"
                  android:layout_gravity="left"
                  android:gravity="center"/>

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="50dp"
                  android:tint="@color/light_grey"
                  android:layout_marginRight="10dp"
                  android:src="@mipmap/forward"
                  android:layout_gravity="right"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="30sp"
              app:cardBackgroundColor="@color/white"
              android:layout_margin="10dp"
              app:cardCornerRadius="10sp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/contact"
                  android:padding="15dp"
                  android:textSize="17dp"
                  android:textColor="@android:color/black"
                  android:fontFamily="@font/lato_bold"
                  android:layout_gravity="left"
                  android:gravity="center"/>

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="50dp"
                  android:tint="@color/light_grey"
                  android:layout_marginRight="10dp"
                  android:src="@mipmap/forward"
                  android:layout_gravity="right"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:id="@+id/card_logout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="30sp"
              app:cardBackgroundColor="@color/white"
              android:layout_margin="10dp"
              app:cardCornerRadius="10sp">

              <TextView
                  android:id="@+id/logout"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/logout"
                  android:padding="15dp"
                  android:textSize="17dp"
                  android:textColor="@android:color/black"
                  android:fontFamily="@font/lato_bold"
                  android:layout_gravity="left"
                  android:gravity="center"/>

              <ImageView
                  android:layout_width="20dp"
                  android:layout_height="50dp"
                  android:tint="@color/light_grey"
                  android:layout_marginRight="10dp"
                  android:src="@mipmap/forward"
                  android:layout_gravity="right"/>


          </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
