<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/colro_shade"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RBA"
            android:textSize="30dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/rba"
            android:fontFamily="@font/poppin_extra"

            ></TextView>
        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18dp"
            android:layout_marginRight="20dp"
            android:textColor="#484848"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:layout_alignParentRight="true"




            ></TextView>

        <ScrollView
            android:layout_below="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:fontFamily="@font/lato_regular"
                    android:layout_gravity="center"
                    android:textSize="17dp"
                    android:textColor="#484848"
                    android:gravity="center"></TextView>


                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/curve_text">

                    <ImageView
                        android:layout_width="30dp"
                        android:src="@mipmap/user_p"
                        android:padding="5dp"
                        android:layout_height="wrap_content"></ImageView>
                    <View
                        android:layout_width="2dp"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray"
                        android:layout_height="40dp"></View>
                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="17dp"
                        android:textColorHint="@android:color/darker_gray"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/lato_regular"
                        android:layout_gravity="center"
                        android:textColor="@android:color/darker_gray"
                        android:hint="@string/name"

                        android:background="#00000000"

                        ></EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/curve_text">

                    <ImageView
                        android:layout_width="30dp"
                        android:src="@mipmap/email"
                        android:padding="5dp"
                        android:layout_height="wrap_content"></ImageView>
                    <View
                        android:layout_width="2dp"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray"
                        android:layout_height="40dp"></View>
                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="17dp"
                        android:textColorHint="@android:color/darker_gray"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/lato_regular"
                        android:layout_gravity="center"
                        android:textColor="@android:color/darker_gray"
                        android:hint="@string/email"

                        android:background="#00000000"

                        ></EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/curve_text">

                    <ImageView
                        android:layout_width="30dp"
                        android:src="@mipmap/mobile"
                        android:padding="5dp"
                        android:layout_height="wrap_content"></ImageView>
                    <View
                        android:layout_width="2dp"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray"
                        android:layout_height="40dp"></View>
                    <EditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="17dp"
                        android:textColorHint="@android:color/darker_gray"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/lato_regular"
                        android:layout_gravity="center"
                        android:textColor="@android:color/darker_gray"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:background="#00000000"

                        ></EditText>
                </LinearLayout>


                <LinearLayout

                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:background="@drawable/curve_text"

                    >



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        >
                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="30dp"
                            android:src="@mipmap/password"
                            android:padding="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_height="30dp"></ImageView>
                        <View
                            android:id="@+id/view1"
                            android:layout_width="2dp"
                            android:layout_toRightOf="@+id/img1"
                            android:layout_gravity="center"
                            android:background="@android:color/darker_gray"
                            android:layout_height="40dp"></View>

                        <EditText
                            android:id="@+id/edt_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="17dp"
                            android:inputType="textPassword"
                            android:textColor="@android:color/darker_gray"
                            android:textColorHint="@android:color/darker_gray"
                            android:fontFamily="@font/lato_regular"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/view1"
                            android:layout_gravity="center"
                            android:layout_toLeftOf="@+id/view2"
                            android:hint="@string/passworrd"

                            android:background="#00000000"

                            ></EditText>
                        <View
                            android:id="@+id/view2"
                            android:layout_width="2dp"
                            android:layout_gravity="center"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="40dp"

                            android:background="@android:color/darker_gray"
                            android:layout_height="40dp"></View>

                        <ImageView
                            android:id="@+id/iv_eye"
                            android:layout_width="20dp"
                            android:layout_marginRight="5dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/invisible"


                            />

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_login"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:background="@drawable/curve_fill">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register1"
                        android:textSize="20dp"

                        android:fontFamily="@font/lato_bold"
                        android:textColor="@android:color/white"/>


                </RelativeLayout>




            </LinearLayout>



        </ScrollView>



    </RelativeLayout>



</RelativeLayout>
