<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/colro_shade"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RBA"
            android:textSize="30dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/rba"
            android:fontFamily="@font/poppin_extra"
            />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:textColor="#484848"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:layout_alignParentRight="true"
            />

        <ScrollView
            android:layout_below="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/curve_text"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@mipmap/user_p"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray"/>

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:background="#00000000"
                        android:fontFamily="@font/lato_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="17sp"
                        />
                </LinearLayout>



                <RelativeLayout
                    android:id="@+id/rl_submit"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/curve_fill"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/submit"
                        android:textColor="@android:color/white"
                        android:textSize="20dp" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
